# mlx-vit-tune

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmark_results/: ab_bf16_m3pro.json  ab_sdpa_m3pro.json  bench_3way.json  benchmark.json  benchmark_m3pro.json  benchmark_m3pro_v03_thermal.json  benchmark_v02.json
configs/: conch.yaml
mlx_vit/: __init__.py  convert.py  data.py  lora.py  model.py  trainer.py  vit.py
scripts/: ab_bf16.py  ab_sdpa.py  bench_3way.py  benchmark.py  benchmark_v02.py  demo.py  plot_hero.py  plot_m3pro.py  plot_v02.py  plot_v03.py  plot_v04.py  profile_v02.py  train.py
tests/: test_vit.py
